# Pljit

./: CMakeLists.txt  README.md
pljit/: CMakeLists.txt  Pljit.cpp  Pljit.hpp
pljit/lex/: Identifer.cpp  Identifer.hpp  Keyword.cpp  Keyword.hpp  LexToken.cpp  LexToken.hpp  Lexer.cpp  Lexer.hpp  Number.cpp  Number.hpp  Position.cpp  Position.hpp  Separator.cpp  Separator.hpp
pljit/lex/test/: CMakeLists.txt  TestLexer.cpp
pljit/semantic/: AST.cpp  AST.hpp  ASTPrintDotVisitor.cpp  ASTPrintDotVisitor.hpp  ASTVisitor.hpp  Evaluator.cpp  Evaluator.hpp  Optimizer.cpp  Optimizer.hpp  Symbol.cpp  Symbol.hpp
pljit/semantic/TreeNode/: Expression.cpp  Expression.hpp  Function.cpp  Function.hpp  SemanticStatement.cpp  SemanticStatement.hpp  SemanticTreeNode.hpp
pljit/semantic/test/: CMakeLists.txt  TestSemantic.cpp
pljit/syntax/: PrintDotVisitor.cpp  PrintDotVisitor.hpp  SyntaxParser.cpp  SyntaxParser.hpp  TreeVisitor.cpp  TreeVisitor.hpp
pljit/syntax/Node/: NonTerminal.cpp  NonTerminal.hpp  SyntaxNode.hpp
pljit/syntax/expression/: Add_Exp.cpp  Add_Exp.hpp  Assign_Exp.cpp  Assign_Exp.hpp  Comp_Statement.cpp  Comp_Statement.hpp  Const_Dec.cpp  Const_Dec.hpp  Dec_List.cpp  Dec_List.hpp  Error.cpp  Error.hpp  Function_Def.cpp  Function_Def.hpp  Init_Dec.cpp  Init_Dec.hpp  Init_List.cpp  Init_List.hpp  Multi_Exp.cpp  Multi_Exp.hpp  Parameter_Dec.cpp  Parameter_Dec.hpp  Prim_Exp.cpp  Prim_Exp.hpp  Statement.cpp  Statement.hpp  Statement_List.cpp  Statement_List.hpp  Unary_Exp.cpp  Unary_Exp.hpp  (+2 more)
pljit/test/: CMakeLists.txt  TestRegisterFunction.cpp
test/: CMakeLists.txt
(+2 files in other folders)
